--- a/estructura-de-datos-u.csproj
+++ b/estructura-de-datos-u.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>learning_dotnet</RootNamespace>
+    <RootNamespace>estructura_de_datos_u</RootNamespace>
   </PropertyGroup>
 
 </Project>
